Issue #8670: the color of the "selected text" field seems too dark.
Just use an inverted logic for the selected text (i.e. white on black in light
mode, or black on white in dark mode). This is the usual logic for rendering
selected text anyway (except that we don't use non-grayscale colors, e.g. blue
background is common in system themes).

--- a/themes/Default/common.css
+++ b/themes/Default/common.css
@@ -31,6 +31,7 @@
   color: @fg-color;
 }
 
+/* Selected items in a treeview list. */
 .view:selected {
   background-color: @extreme-selected-color;
   color: @fg-color;
@@ -38,6 +39,12 @@
 
 .view:disabled {
   color: @disabled-fg-color;
+}
+
+/* Selected text in a treeview cell (e.g. layer name in edition mode). */
+.view selection {
+  background-color: @fg-color;
+  color: @bg-color;
 }
 
 /* The main image window before it has an image in it,
@@ -222,7 +229,8 @@ entry {
 }
 
 entry selection {
-  background: @extreme-selected-color;
+  background-color: @fg-color;
+  color: @bg-color;
 }
 
 paned separator {
